--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "ddw-character-builder"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+version = "0.0.1"
+description = "A fully-fledged character creation utility for DnDWithin"
+authors = ["CyprienGille"]
 license = ""
 repository = ""
 edition = "2021"
