--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -6,17 +6,18 @@ authors = ["CyprienGille"]
 license = ""
 repository = ""
 edition = "2021"
+rust-version = "1.79"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.0", features = [] }
+tauri-build = { version = "1.5.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.5.2", features = ["dialog-open", "dialog-save"] }
-tauri-cli = "1.5.6"
-serde = { version = "1.0.188", features = ["derive"] }
-serde_json = "1.0.107"
+tauri = { version = "1.7.1", features = ["dialog-open", "dialog-save"] }
+tauri-cli = "1.6.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
